bai tập ve nha buoi 2

--- a/btvn-day2/25032025.html
+++ b/btvn-day2/25032025.html
@@ -24,7 +24,7 @@
         <td align="left">Mon</td>
         <td align="left">8AM</td>
         <td align="left"> 5PM</td>
-        <td align="center"><a href="./wedhtml.html">HTML</a></td>
+        <td align="center"><a href="./wedhtml.html" target="_blank">HTML</a></td>
         <td>OK</td>
     </tr>
     <tr>
@@ -42,7 +42,7 @@
     <tr>
         <td align="left">2PM</td>
         <td align="left">5PM</td>
-        <td align="center"><a href="./wed-java.html">JS</a></td>
+        <td align="center"><a href="./wed-java.html" target="_blank">JS</a></td>
         <td align="left">GOOD</td>
     </tr>
     <tr>
