--- a/btvn-day3/formcontact.html
+++ b/btvn-day3/formcontact.html
@@ -23,7 +23,7 @@
                 <label for="name" hidden="">Enter your full name</label>
                 <input type="text" name="name" id="name" placeholder="* Enter your full name">
             </td>
-            <td align="left">
+            <td>
                 <label for="name1" hidden="">Enter your full name 1</label>
                 <input type="text" name="name1" id="name1" placeholder="* Enter your full name">
             </td>
@@ -39,8 +39,7 @@
             <td colspan="2">
                 <br>
                 <label for="message" hidden="">Your messager here</label>
-                <textarea name="message" id="message" placeholder="* Your message here" rows="5" cols="50">
-               </textarea>
+                <textarea name="message" id="message" placeholder="* Your message here" rows="10" cols="70"></textarea>
             </td>
         </tr>
         <tr>
