bai tập ve nha buoi 4

--- a/btvn-day3/wed.html
+++ b/btvn-day3/wed.html
@@ -8,6 +8,24 @@
     <title>Document</title>
 </head>
 <body>
-
+<h1>Bai tap ve nha buoi 4</h1>
+<table>
+    <tr>
+        <td>
+            Form Login:
+        </td>
+        <td>
+            <a href="./formlogin.html">Form Login</a>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Form Contact:
+        </td>
+        <td>
+            <a href="./formcontact.html">Form Contact</a>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
