--- a/btvn-day3/wed.html
+++ b/btvn-day3/wed.html
@@ -15,7 +15,7 @@
             Form Login:
         </td>
         <td>
-            <a href="./formlogin.html">Form Login</a>
+            <a href="./formlogin.html" target="_blank">Form Login</a>
         </td>
     </tr>
     <tr>
@@ -23,7 +23,7 @@
             Form Contact:
         </td>
         <td>
-            <a href="./formcontact.html">Form Contact</a>
+            <a href="./formcontact.html" target="_blank">Form Contact</a>
         </td>
     </tr>
 </table>
