--- a/btvn-day4/formsubscribe.html
+++ b/btvn-day4/formsubscribe.html
@@ -1,61 +1,76 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
-<style>
+  </head>
+  <style>
     * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-    h1  {
-        margin: 10px;
+    h1 {
+      margin: 10px;
     }
     p {
-        margin: 10px;
+      margin: 10px;
     }
     .button {
-        margin: 10px;
+      margin: 10px;
     }
-span {
-    color: orange;
-}
-body {
-    background:steelblue;
-}
-input {
-    padding: 5px;
-}
-button {
-    padding: 5px;
-    background: yellow;
-
-    body:hover {
-    input::placeholder {
-    color: orange;}
+    span {
+      color: orange;
+    }
+    div {
+      background: steelblue;
+    }
+    div {
+      border-radius: 10px;
+    }
     input {
-        background: lightgray;
+      padding: 5px;
     }
     button {
-        background: orange;
+      padding: 5px;
+      background: yellow;
     }
+    div:hover {
+      input::placeholder {
+        color: orange;
+      }
+      input {
+        background: lightgray;
+      }
+      button {
+        background: orange;
+      }
+      button {
+        color: white;
+      }
+    }
+  </style>
 
-}
-
-</style>
-
-<body>
-    <h1><span class="head">Earn income</span> with Css skills</h1>
-    <p>Sign up and we'll send you the best freelance opportunities straight to your inbox.</p>
-    <p>We're building the largest self-service freelancing marketplace for people like you></p>
-    <form action="">
-            <input type="email" name="email" id="email" placeholder="Email Address">
-            <button>Send Me Opportunities</button>
-    </form>
-</body>
+  <body>
+   <div>
+     <h1><span class="head">Earn income</span> with Css skills</h1>
+     <p>
+       Sign up and we'll send you the best freelance opportunities straight to
+       your inbox.
+     </p>
+     <p>
+       We're building the largest self-service freelancing marketplace for people
+       like you>
+     </p>
+     <form action="">
+       <input type="email" name="email" id="email" placeholder="Email Address" />
+       <button>Send Me Opportunities</button>
+     </form>
+   </div>
+  </body>
 </html>
