bai tập ve nha buoi 6

--- a/btvn-day6/customlist.html
+++ b/btvn-day6/customlist.html
@@ -8,14 +8,17 @@
     <title>Document</title>
 </head>
 <style>
-    h2::before {
+    p::before {
         content: '☺️';
+    }
+    p {
+        font-weight: 600;
     }
 </style>
 <body>
-<h2>John</h2>
-<h2>Michael</h2>
-<h2>Simpson</h2>
-<h2>Johnson</h2>
+<p>John</p>
+<p>Michael</p>
+<p>Simpson</p>
+<p>Johnson</p>
 </body>
 </html>
