bai tập ve nha buoi 6

--- a/btvn-day6/formsubscribe.html
+++ b/btvn-day6/formsubscribe.html
@@ -26,8 +26,7 @@
     }
     div {
       background: steelblue;
-    }
-    div {
+      width: 500px;
       border-radius: 10px;
     }
     input {
@@ -62,7 +61,7 @@
      </p>
      <p>
        We're building the largest self-service freelancing marketplace for people
-       like you>
+       like you
      </p>
      <form action="">
        <input type="email" name="email" id="email" placeholder="Email Address" />
