bai tập ve nha buoi 7

--- a/btvn-day7/menu-ngang.html
+++ b/btvn-day7/menu-ngang.html
@@ -114,6 +114,24 @@
     .item ul li:hover ul {
         display: block;
     }
+    /*menu cap 3*/
+    .item ul li ul li > ul {
+        display: none !important;
+        position: absolute;
+        left: 100%;
+        background: white;
+        padding: 10px;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        border-radius: 5px;
+        min-width: 150px;
+    }
+    .item ul li ul li:hover ul {
+        display: block !important;
+        position: absolute;
+        left: 100%;
+        top: 0;
+        margin-left: 0px;
+    }
     .item ul li ul li {
         padding: 8px 0;
         border-bottom: 1px solid #f0f0f0;
@@ -158,49 +176,175 @@
                 <li>
                     <a href="#" class="home">Home</a>
                     <ul class="sub-home">
-                        <li>Home 1</li>
-                        <li>Home 2</li>
-                        <li>Home 3</li>
+                        <li>
+                            Home 1
+                            <ul class="home-item">
+                                <li>Home 1.1</li>
+                                <li>Home 1.2</li>
+                                <li>Home 1.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Home 2
+                            <ul class="home-item">
+                                <li>Home 2.1</li>
+                                <li>Home 2.2</li>
+                                <li>Home 2.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Home 3
+                            <ul class="home-item">
+                                <li>Home 3.1</li>
+                                <li>Home 3.2</li>
+                                <li>Home 3.3</li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <a href="#" class="courses">Courses</a>
                     <ul class="sub-courses">
-                        <li>Courses 1</li>
-                        <li>Courses 2</li>
-                        <li>Courses 3</li>
+                        <li>
+                            Courses 1
+                            <ul class="courses-item">
+                                <li>Courses 1.1</li>
+                                <li>Courses 1.2</li>
+                                <li>Courses 1.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Courses 2
+                            <ul class="courses-item">
+                                <li>Courses 2.1</li>
+                                <li>Courses 2.2</li>
+                                <li>Courses 2.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Courses 3
+                            <ul class="courses-item">
+                                <li>Courses 3.1</li>
+                                <li>Courses 3.2</li>
+                                <li>Courses 3.3</li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <a href="#" class="dashboard ">Dashboard </a>
                     <ul class="sub-dashboard">
-                        <li>Dashboard 1</li>
-                        <li>Dashboard 2</li>
-                        <li>Dashboard 3</li>
+                        <li>
+                            Dashboard 1
+                            <ul class="dashboard-item">
+                                <li>Dashboard 1.1</li>
+                                <li>Dashboard 1.2</li>
+                                <li>Dashboard 1.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Dashboard 2
+                            <ul class="dashboard-item">
+                                <li>Dashboard 2.1</li>
+                                <li>Dashboard 2.2</li>
+                                <li>Dashboard 2.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Dashboard 3
+                            <ul class="dashboard-item">
+                                <li>Dashboard 3.1</li>
+                                <li>Dashboard 3.2</li>
+                                <li>Dashboard 3.3</li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <a href="#" class="page">Pages</a>
                     <ul class="sub-pages">
-                        <li>Pages 1</li>
-                        <li>Pages 2</li>
-                        <li>Pages 3</li>
+                        <li>
+                            Pages 1
+                            <ul class="pages-item">
+                                <li>Pages 1.1</li>
+                                <li>Pages 1.2</li>
+                                <li>Pages 1.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Pages 2
+                            <ul class="pages-item">
+                                <li>Pages 2.1</li>
+                                <li>Pages 2.2</li>
+                                <li>Pages 2.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Pages 3
+                            <ul class="pages-item">
+                                <li>Pages 3.1</li>
+                                <li>Pages 3.2</li>
+                                <li>Pages 3.3</li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <a href="#" class="elements">Elements</a>
                     <ul class="sub-elements">
-                        <li>Elements 1</li>
-                        <li>Elements 2</li>
-                        <li>Elements 3</li>
+                        <li>
+                            Elements 1
+                            <ul class="elements-item">
+                                <li>Elements 1.1</li>
+                                <li>Elements 1.2</li>
+                                <li>Elements 1.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Elements 2
+                            <ul class="elements-item">
+                                <li>Elements 2.1</li>
+                                <li>Elements 2.2</li>
+                                <li>Elements 2.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Elements 3
+                            <ul class="elements-item">
+                                <li>Elements 3.1</li>
+                                <li>Elements 3.2</li>
+                                <li>Elements 3.3</li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <a href="#" class="blog">Blog</a>
                     <ul class="sub-blog">
-                        <li>Blog 1</li>
-                        <li>Blog 2</li>
-                        <li>Blog 3</li>
+                        <li>
+                            Blog 1
+                            <ul class="blog-item">
+                                <li>Blog 1.1</li>
+                                <li>Blog 1.2</li>
+                                <li>Blog 1.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Blog 2
+                            <ul class="blog-item">
+                                <li>Blog 2.1</li>
+                                <li>Blog 2.2</li>
+                                <li>Blog 2.3</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Blog 3
+                            <ul class="blog-item">
+                                <li>Blog 3.1</li>
+                                <li>Blog 3.2</li>
+                                <li>Blog 3.3</li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
             </ul>
