--- a/btvn-day7/menu-ngang.html
+++ b/btvn-day7/menu-ngang.html
@@ -106,10 +106,10 @@
         top: 100%;
         left: 0;
         background: white;
-        padding: 10px;
+        padding: 0;
         box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         border-radius: 5px;
-        min-width: 150px;
+        min-width: 130px;
     }
     .item ul li:hover ul {
         display: block;
@@ -118,24 +118,27 @@
     .item ul li ul li > ul {
         display: none !important;
         position: absolute;
-        left: 100%;
+        top: 100%;
+        left: 0;
         background: white;
-        padding: 10px;
+        padding: 5px;
         box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         border-radius: 5px;
         min-width: 150px;
+        margin: 0;
     }
     .item ul li ul li:hover ul {
         display: block !important;
         position: absolute;
         left: 100%;
         top: 0;
-        margin-left: 0px;
+        margin-left: 0;
     }
     .item ul li ul li {
         padding: 8px 0;
         border-bottom: 1px solid #f0f0f0;
         font-size: 12px;
+        margin: 5px 0;
     }
     .item ul li ul li:hover {
         background: #f9f9f9;
