--- a/btvn-day7/menu-ngang.html
+++ b/btvn-day7/menu-ngang.html
@@ -135,10 +135,11 @@
         margin-left: 0;
     }
     .item ul li ul li {
-        padding: 8px 0;
+        padding: 5px 0;
         border-bottom: 1px solid #f0f0f0;
         font-size: 12px;
         margin: 5px 0;
+        text-align: center;
     }
     .item ul li ul li:hover {
         background: #f9f9f9;
