bai tập ve nha buoi 8

--- a/btvn-day8/baitap-1.html
+++ b/btvn-day8/baitap-1.html
@@ -3,227 +3,326 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact Form</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-            href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lobster&display=swap"
-            rel="stylesheet"
-    />
-    <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-            href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lobster&display=swap"
-            rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    body {
-        background: #f5f5f5;
-        padding: 20px;
-    }
-    h1 {
-        font-family: "Lobster", sans-serif;
-        font-weight: 400;
-        margin-bottom: 15px;
-        color: #333333;
-    }
-    .product p {
-        margin-bottom: 25px;
-        line-height: 1.6;
-    }
-    .product p span {
-        color: red;
-        font-weight: bold;
-    }
-    .product {
-        font-family: "Lato", sans-serif;
-        font-weight: 400;
-        max-width: 500px;
-        padding: 30px;
-        background: white;
-    }
-    .container {
-        max-width: 1200px;
-        margin: 0 auto;
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lobster&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=expand_all" />
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            background: #f5f5f5;
+            padding: 20px;
+        }
+        h1 {
+            font-family: "Lobster", sans-serif;
+            font-weight: 600;
+            margin-bottom: 0px;
+            color: #333333;
+            margin-left: 30px;
+        }
+        .product p {
+            margin-bottom: 25px;
+            line-height: 1.6;
+            color: #bebebe;
+        }
+        .product p span {
+            color: red;
+            font-weight: bold;
+        }
+        .product {
+            font-family: "Lato", sans-serif;
+            max-width: 500px;
+            padding: 30px;
 
-    }
-    .input-group  {
-        position: relative;
-        display: flex;
-        margin-bottom: 20px;
-        align-items: center;
-    }
-    .input-group span:first-child {
-        background: black;
-        color: white;
-        padding: 0 15px;
-        font-size: 16px;
-        height: 48px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 4px 0 0 4px;
-    }
-    .input-group input,
-    .input-group select,
-    .input-group textarea {
-        height: 48px;
-        width: 100%;
-        padding: 0 15px;
-        font-family: "Lato", sans-serif;
-        border-radius: 0 4px 4px 0;
-        font-size: 14px;
-        border-left: none;
-    }
-    .input-group input:focus,
-    .input-group select:focus,
-    .input-group textarea:focus {
-        border-color: #3498db;
-        outline: none;
-    }
-    .input-group textarea {
-        height: 150px;
-        padding: 15px;
-        resize: vertical;
-    }
-    .required-field::after {
-        font-family: "Font Awesome 6 Free";
-        font-weight: 900;
-        content: "\f005";
-        position: absolute;
-        right: 15px;
-        top: 50%;
-        transform: translateY(-50%);
-        color: black;
-        font-size: 8px;
-    }
-    .input-group:nth-of-type(3) span:first-child {
-        padding:0 18px 0 15px;
-    }
-    .input-group:nth-of-type(5) span:first-child {
-        align-self: flex-start;
-        padding-top: 15px;
-        height: 150px;
-    }
-    .confirm {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 25px;
-    }
-    .confirm label {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        cursor: pointer;
-    }
-    .confirm button {
-        padding: 12px 30px;
-        background-color: #2c3e50;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        font-family: "Lato", sans-serif;
-        font-weight: 600;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        transition: background 0.3s;
-    }
-    .confirm button:hover {
-        background-color: #1a252f;}
-    select {
-        appearance: none;
-        background-repeat: no-repeat;
-        background-position: right 10px center;
-        background-size: 15px;
-    }
-</style>
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .input-group {
+            position: relative;
+            display: flex;
+            margin-bottom: 20px;
+            align-items: center;
+            border:1px solid #bebebe;
+        }
+        .input-group span:first-child {
+            background:#bebebe;
+            color: white;
+            padding: 0 20px;
+            font-size: 16px;
+            height: 48px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .input-group .message-icon {
+            align-self: stretch;
+            height: 150px !important;
+            display: flex;
+            align-items: flex-start !important;
+            padding-top: 20px !important;
+        }
+        .input-group input,
+        .input-group select,
+        .input-group textarea {
+            border: 2px solid #bebebe;
+            height: 48px;
+            width: 100%;
+            padding: 0 15px;
+            font-family: "Lato", sans-serif;
+            font-size: 14px;
+            border-left: none;
+        }
+        .input-group input:focus,
+        .input-group select:focus,
+        .input-group textarea:focus {
+            border-color: #bebebe;
+            outline: none;
+        }
+        .input-group textarea {
+            height: 150px;
+            padding: 15px;
+            resize: vertical;
+        }
+        .required-field::after {
+            font-family: "Font Awesome 6 Free";
+            font-weight: 900;
+            content: "\f005";
+            position: absolute;
+            right: 15px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #bebebe;
+            font-size: 8px;
+        }
+        .required-field2::after {
+            font-family: "Font Awesome 6 Free";
+            font-weight: 900;
+            content: "\f07d";
+            position: absolute;
+            right: 15px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #bebebe;
+            font-size: 10px;
+        }
+        .required-field3::after {
+            font-family: "Font Awesome 6 Free";
+            font-weight: 900;
+            content: "\f005";
+            position: absolute;
+            right: 15px;
+            top: 15%;
+            transform: translateY(-50%);
+            color: #bebebe;
+            font-size: 8px;
+        }
+        .input-group:nth-of-type(3) span:first-child {
+            padding: 0 18px 0 15px;
+        }
+        .input-group:nth-of-type(5) span:first-child {
+            align-self: flex-start;
+            padding-top: 15px;
+            height: 150px;
+        }
+        .confirm {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 25px;
+            color: #bebebe;
+        }
+        .confirm label {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 10px;
+            cursor: pointer;
+        }
+        .confirm button {
+            padding: 12px 30px;
+            background-color:orangered;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-family: "Lato", sans-serif;
+            font-weight: 600;
+            letter-spacing: 1px;
+        }
+        .confirm button:hover {
+            background-color: #1a252f;
+        }
+        select {
+            appearance: none;
+            background-repeat: no-repeat;
+            background-position: right 10px center;
+            background-size: 15px;
+        }
+        .input-group::placeholder {
+            color: #bebebe;
+        }
+        select option[disabled][selected] {
+            color: #bebebe;
+        }
+        .input-container {
+            position: relative;
+            margin-bottom: 25px;
+        }
+        .confirm input[type="checkbox"] {
+            width: 20px;
+            height: 20px;
+        }
+
+        .input-text {
+            display: none;
+            top:-35px;
+            left:50px;
+            position: absolute;
+            color: white;
+            background-color: black;
+            z-index: 10;
+            width: 200px;
+            padding: 5px 10px;
+        }
+        .input-text::after {
+            content: "";
+            position: absolute;
+            bottom: -4.5px;
+            left: 15px;
+            width: 0;
+            height: 0;
+            border-left: 6px solid transparent;
+            border-right: 6px solid transparent;
+            border-top: 6px solid black;
+        }
+        .input-group:hover ~.input-text {
+            display: block;
+        }
+        .input-group:focus-within > span:first-child {
+            background-color: black;
+            color: white;
+        }
+        .input-group input:focus,
+        .input-group select:focus,
+        .input-group textarea:focus {
+            border-color: #000000;
+        }
+        .input-group:focus-within.required-field::after {
+            content: "\f00d";
+            font-weight: 900;
+            font-size: 10px;
+            color: #bebebe;
+        }
+
+        .input-group:focus-within.required-field2::after {
+            content: "";
+            color: #bebebe;
+        }
+
+        .input-group:focus-within.required-field3::after {
+            content: "\f00d";
+            font-weight: 900;
+            font-size: 10px;
+            color: #bebebe;
+            top: 15%;
+        }
+    </style>
+</head>
 <body>
 <div class="container">
     <h1>Hey there</h1>
     <form action="">
         <div class="product">
             <p>
-                <span>We'd like to heart from you.</span> Send us your message or just
-                say hy with our contact form or directly via phone, we love to chat.
+                <span>We'd like to hear from you.</span> Send us your message or just
+                say hi with our contact form or directly via phone, we love to chat.
             </p>
-            <div class="input-group required-field">
+
+            <div class="input-container">
                 <label for="name">
-                    <span class="fa-solid fa-user"></span>
-                    <input
-                            type="text"
-                            name="name"
-                            id="name"
-                            class="name"
-                            placeholder="Your name"
-                            required
-                    />
+                    <div class="input-group required-field">
+                        <span class="fa-solid fa-user"></span>
+                        <input
+                                type="text"
+                                name="name"
+                                id="name"
+                                class="name"
+                                placeholder="Your name"
+                                required
+                        />
+                    </div>
+                    <div class="input-text">Enter your name</div>
                 </label>
             </div>
-            <div class="input-group required-field">
-                <label for="mail"
-                ><span class="fa-solid fa-envelope"></span>
-                    <input
-                            type="email"
-                            name="mail"
-                            id="mail"
-                            class="email"
-                            placeholder="your@domain.com"
-                            required
-                    /></label>
-            </div>
-            <div class="input-group">
-                <label for="phone">
-                    <span class="fa-solid fa-mobile"></span>
-                    <input
-                            type="number"
-                            name="phone"
-                            id="phone"
-                            class="phone"
-                            placeholder="+44 00 123"
-                    />
+            <div class="input-container">
+                <label for="mail">
+                    <div class="input-group required-field">
+                        <span class="fa-solid fa-envelope"></span>
+                        <input
+                                type="email"
+                                name="mail"
+                                id="mail"
+                                class="email"
+                                placeholder="your@domain.com"
+                                required
+                        />
+                    </div>
+                    <div class="input-text">Enter your email address</div>
                 </label>
             </div>
-            <div class="input-group">
+            <div class="input-container">
+                    <div class="input-group">
+                        <span class="fa-solid fa-mobile"></span>
+                        <input
+                                type="tel"
+                                name="phone"
+                                id="phone"
+                                class="phone"
+                                placeholder="+44 00 123"
+                        />
+                    </div>
+                    <div class="input-text">Enter your phone number</div>
+                </label>
+            </div>
+            <div class="input-container">
                 <label for="subject">
-                    <span class="fa-solid fa-folder-open"></span>
-                    <select name="subject" id="subject">
-                        <option value="title" disabled selected>Subject</option>
-                        <option value="math">Math</option>
-                        <option value="phy">Physics</option>
-                        <option value="che">chemistry</option>
-                    </select>
+                    <div class="input-group required-field2">
+                        <span class="fa-solid fa-folder-open"></span>
+                        <select name="subject" id="subject" required>
+                            <option value="" disabled selected hidden>Subject</option>
+                            <option value="math">Math</option>
+                            <option value="phy">Physics</option>
+                            <option value="che">Chemistry</option>
+                        </select>
+                    </div>
+                    <div class="input-text">Select a subject</div>
                 </label>
             </div>
-            <div class="input-group">
-                <label for="message">
-                    <span class="fa-solid fa-message" id="icon-message"></span>
-                    <textarea
-                            name="message"
-                            id="message"
-                            class="message"
-                            placeholder="Message"
-                    ></textarea>
-                </label>
-            </div>
+           <div class="input-container">
+               <label for="message">
+                   <div class="input-group required-field3">
+                       <span class="fa-solid fa-message message-icon"></span>
+                       <textarea name="message"
+                                 id="message"
+                                 class="message"
+                                 placeholder="Message"></textarea>
+                   </div>
+                   <div class="input-text">Enter your message</div>
+               </label>
+           </div>
             <div class="confirm">
                 <label for="checkbox">
                     <input type="checkbox" name="checkbox" id="checkbox" />
                     <span>Send me a copy of this message</span>
                 </label>
-                <button>SEND</button>
+                <button type="submit">SEND</button>
             </div>
         </div>
     </form>
