bai tập ve nha buoi 8

--- a/btvn-day8/baitap-1.html
+++ b/btvn-day8/baitap-1.html
@@ -201,7 +201,7 @@
             border-right: 6px solid transparent;
             border-top: 6px solid black;
         }
-        .input-group:active ~.input-text {
+        .input-group:focus-within ~.input-text {
             display: block;
         }
         .input-group:hover > span:first-child {
