--- a/btvn-day8/baitap-2.html
+++ b/btvn-day8/baitap-2.html
@@ -35,6 +35,7 @@
         float: left;
         position: relative;
         top: -7px;
+        margin-right: 10px;
     }
     .option {
         font-size: 8px;
@@ -58,15 +59,14 @@
     .content {
         margin: 25px;
         position: relative;
-        width: 300px;
+        width: calc(100% / 3 - 100px);
         max-width: 100%;
     }
     .content img {
-        width: 100%;
+        width: 100% ;
         height: 250px;
         display: block;
         border-radius: 5px;
-        flex: 1 1 auto;
     }
     .location {
         position: absolute;
